[gd_scene load_steps=4 format=3 uid="uid://dusxfmn6wadau"]

[ext_resource type="Script" path="res://Scenes/Combat/Pointers/Pointers.gd" id="1_xar5m"]
[ext_resource type="PackedScene" path="res://Scenes/Combat/Pointers/big_pointer.tscn" id="2_ntp4c"]
[ext_resource type="PackedScene" path="res://Scenes/Combat/Pointers/small_pointer.tscn" id="3_kiqd6"]

[node name="Pointers" type="Node"]
script = ExtResource("1_xar5m")

[node name="BigPointer" parent="." instance=ExtResource("2_ntp4c")]
visible = false
position = Vector2(528, 256)

[node name="Pointer1" parent="." instance=ExtResource("3_kiqd6")]
visible = false
position = Vector2(528, 96)

[node name="Pointer2" parent="." instance=ExtResource("3_kiqd6")]
visible = false
position = Vector2(528, 256)

[node name="Pointer3" parent="." instance=ExtResource("3_kiqd6")]
visible = false
position = Vector2(528, 456)
